--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
-  "window.zoomLevel": 1,
-  "editor.fontSize": 24,
+  "window.zoomLevel": 0,
+  "editor.fontSize": 16,
   "python.languageServer": "Pylance", // ms-python.vscode-pylance
   "python.testing.unittestEnabled": false, // ms-python.python
   "python.testing.pytestEnabled": true,
-  "python.testing.pytestArgs": [], // -x to bail
+  "python.testing.pytestArgs": [
+    "."
+  ], // -x to bail
   "python.linting.flake8Enabled": true,
   "python.linting.mypyEnabled": true,
   "python.linting.pylintArgs": [
