--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,8 +7,6 @@
   "python.testing.pytestArgs": [
     "."
   ], // -x to bail
-  "python.linting.flake8Enabled": true,
-  "python.linting.mypyEnabled": true,
   "python.linting.pylintArgs": [
     "--load-plugins=pylint_django",
     "--errors-only"
@@ -16,7 +14,7 @@
   "python.formatting.autopep8Args": ["--indent-size=4"],
   "python.defaultInterpreterPath": "venv/bin/python",
   "[python]": {
-    "editor.defaultFormatter": "ms-python.python", // ms-python.python
+    "editor.defaultFormatter": "ms-python.autopep8", // ms-python.python
     "editor.tabSize": 4,
     "editor.insertSpaces": true,
     "editor.formatOnSave": true,
@@ -59,5 +57,6 @@
     "django-html": "html", // batisteo.vscode-django
     "javascript": "javascriptreact",
     "typescript": "typescriptreact"
-  }
+  },
+  "python.formatting.provider": "none"
 }
