--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,28 +1,11 @@
 {
   "window.zoomLevel": 0,
-  "editor.fontSize": 16,
-  "python.languageServer": "Pylance", // ms-python.vscode-pylance
+  "editor.fontSize": 18,
   "python.testing.unittestEnabled": false, // ms-python.python
   "python.testing.pytestEnabled": true,
   "python.testing.pytestArgs": [
     "."
-  ], // -x to bail
-  "python.linting.pylintArgs": [
-    "--load-plugins=pylint_django",
-    "--errors-only"
   ],
-  "python.formatting.autopep8Args": ["--indent-size=4"],
-  "python.defaultInterpreterPath": "venv/bin/python",
-  "[python]": {
-    "editor.defaultFormatter": "ms-python.autopep8", // ms-python.python
-    "editor.tabSize": 4,
-    "editor.insertSpaces": true,
-    "editor.formatOnSave": true,
-    "editor.formatOnType": true,
-    "editor.codeActionsOnSave": {
-      "source.organizeImports": true
-    }
-  },
   "[html]": {
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "vscode.html-language-features",
@@ -58,5 +41,5 @@
     "javascript": "javascriptreact",
     "typescript": "typescriptreact"
   },
-  "python.formatting.provider": "none"
+  "python.formatting.provider": "none",
 }
