--- a/pytest.ini
+++ b/pytest.ini
@@ -4,8 +4,12 @@ python_files = test.py tests.py test_*.py tests_*.py *_test.py *_tests.py
 addopts = 
   --doctest-modules
   --strict-markers
-  # -rP
+  -rP
 markers =
   slow: Run tests that are slow
   fast: Run fast tests
-  functional_test: Run tests that are selenium based
+
+filterwarnings =
+    error
+    ignore::UserWarning
+    ignore:function ham\(\) is deprecated:DeprecationWarning
