--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
   "window.zoomLevel": 0,
   "editor.fontSize": 18,
-  "python.testing.unittestEnabled": false, // ms-python.python
-  "python.testing.pytestEnabled": true,
+  "python.testing.unittestEnabled": true, // ms-python.python
+  "python.testing.pytestEnabled": false,
   "python.testing.pytestArgs": [
     "."
   ],
@@ -43,4 +43,11 @@
   },
   "python.formatting.provider": "none",
   "liveServer.settings.port": 5501,
+  "python.testing.unittestArgs": [
+    "-v",
+    "-s",
+    "./utils",
+    "-p",
+    "test_*.py"
+  ],
 }
