--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,7 @@
   "editor.fontSize": 18,
   "python.testing.unittestEnabled": true, // ms-python.python
   "python.testing.pytestEnabled": false,
-  "python.testing.pytestArgs": [
-    "."
-  ],
+  "python.testing.pytestArgs": [],
   "[html]": {
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "vscode.html-language-features",
