--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
   "window.zoomLevel": 0,
   "editor.fontSize": 18,
-  "python.testing.unittestEnabled": true, // ms-python.python
-  "python.testing.pytestEnabled": false,
-  "python.testing.pytestArgs": [],
+  "python.testing.unittestEnabled": false, // ms-python.python
+  "python.testing.pytestEnabled": true,
+  "python.testing.pytestArgs": [
+    "."
+  ],
   "[html]": {
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "vscode.html-language-features",
