--- a/pytest.ini
+++ b/pytest.ini
@@ -8,6 +8,7 @@ addopts =
 markers =
   slow: Run tests that are slow
   fast: Run fast tests
+  functional_test: Run test that are selenium based
 
 filterwarnings =
     error
