--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "window.zoomLevel": 2,
+    "window.zoomLevel": 0,
     "editor.formatOnSave": true,
     "code-runner.executorMap": {
       "python": "clear ; .\\venv\\Scripts\\python.exe"
@@ -14,7 +14,7 @@
       "editor.formatOnSave": true,
       "editor.formatOnType": true,
       "editor.codeActionsOnSave": {
-        "source.organizeImports": true
+        "source.organizeImports": "explicit"
       }
     },
     "python.languageServer": "Pylance",
